[gd_scene format=3 uid="uid://chumvllowmp1y"]

[ext_resource type="Script" uid="uid://gpjqkxlkf2ds" path="res://Scripts/Components/Enemy/TargetingComponent.gd" id="1_g728m"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_g728m"]
radius = 7.6342773

[node name="TargetingComponent" type="Node" unique_id=497121743]
script = ExtResource("1_g728m")
metadata/_custom_type_script = "uid://gpjqkxlkf2ds"

[node name="Area3D" type="Area3D" parent="." unique_id=1646807079]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" unique_id=1174729622]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.76002216, 0)
shape = SubResource("CylinderShape3D_g728m")
debug_color = Color(0.95703125, 1, 0, 0.41960785)

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
